--- a/after-login.html
+++ b/after-login.html
@@ -93,17 +93,22 @@
         <div class="kategori-lomba container-fluid text-center">
           <h1>Kategori Lomba</h1>
           <div class="row">
-            <div class="col bionix-sl">
-              <h2>BIONIX Student Level</h2>
-              <p>Olimpiade bisnis dan IT terbesar<br>di Indonesia untuk tingkat pelajar<br>SMA/SMK sederajat.</p>
-              <a href="#" class="btn daftar">Daftar</a>
-              <a href="#" class="btn selengkapnya">Selengkapnya</a>
+            <div class="col">
+              <div class="bionix-sl mx-md-5">
+                <h2>BIONIX Student Level</h2>
+                <p>Olimpiade bisnis dan IT terbesar<br>di Indonesia untuk tingkat pelajar<br>SMA/SMK sederajat.</p>
+                <a href="#" class="btn daftar">Daftar</a>
+                <a href="#" class="btn selengkapnya">Selengkapnya</a>
+              </div>
             </div>
-            <div class="col bionix-cl">
-              <h2>BIONIX College Level</h2>
-              <p>Kompetisi studi kasus bisnis<br>nasional untuk tingkat mahasiswa<br>di Indonesia.</p>
-              <a href="#" class="btn daftar">Daftar</a>
-              <a href="#" class="btn selengkapnya">Selengkapnya</a>
+            <div class="col">
+              <div class="bionix-cl mx-md-5">
+                <h2>BIONIX College Level</h2>
+                <p>Kompetisi studi kasus bisnis<br>nasional untuk tingkat mahasiswa<br>di Indonesia.</p>
+                <a href="#" class="btn daftar">Daftar</a>
+                <a href="#" class="btn selengkapnya">Selengkapnya</a>
+
+              </div>
             </div>
           </div>
         </div>
@@ -192,47 +197,61 @@
           
         </div>
 
-        <!-- swiper 2 section start -->
+    <!-- swiper 2 section start -->
         <div class="swiper-bottom">
           <div class="swiper-container mySwiper swiper-2">
-            <h2 class="title text-center">Apa Kata Mereka Tentang BIONIX?</h2>
-            <div class="swiper-wrapper">
-              <div class="swiper-slide slide1-2">
-                <div class="content">
-                  <div class="container-fluid">
-                    <div class="row">
-                      <div class="col-4 img-nabila rounded-right">
+              <h2 class="container title text-left">Apa Kata Mereka Tentang ISE?</h2>
+              <div class="swiper-wrapper">
+                  <div class="swiper-slide slide1-2">
+                      <div class="content d-flex">
+                          <div class="container-fluid d-md-flex">
+                              <div class="row">
+                                  <div class="col-md-4 img-nabila rounded-end">
+                                  </div>
+                                  <div class="col-md-8 desc">
+                                      <h2 style="font-family: 'Hind Bold'">Bisa dapat <span>Free Pass SNMPTN</span>,
+                                          <span>banyak relasi</span>, dan <span>wawasan baru</span>!
+                                      </h2>
+                                      <p>“Dari BIONIX, wawasanku lebih terbuka tentang sistem informasi dan dapat banyak
+                                          wawasan baru yang sebelumnya gak aku dapetin di SMA. Selain itu, di BIONIX aku
+                                          juga
+                                          dapet banyak temen baru yang bahkan masih keep contact sampai sekarang sehingga
+                                          dari
+                                          sini aku juga bisa memperluas relasi. Last but not least, aku juga dapat Free
+                                          Pass
+                                          SNMPTN Sistem Informasi ITS berkat BIONIX.”</p>
+                                      <h4>Nabila Aprillia<br><span
+                                              style="color: rgba(0,0,0,0.65)">1st Winner BIONIX 2019</span></h4>
+                                  </div>
+                              </div>
+                          </div>
                       </div>
-                      <div class="col-8 desc">
-                        <h2>Bisa dapat <span>Free Pass SNMPTN</span>, <span>banyak relasi</span>, dan <span>wawasan baru!</span></h2>
-                        <p>“Dari BIONIX, wawasanku lebih terbuka tentang sistem informasi dan dapat banyak wawasan baru yang sebelumnya gak aku dapetin di SMA. Selain itu, di BIONIX aku juga dapet banyak temen baru yang bahkan masih keep contact sampai sekarang sehingga dari sini aku juga bisa memperluas relasi. Last but not least, aku juga dapat Free Pass SNMPTN Sistem Informasi ITS berkat BIONIX.”</p>
-                        <h4>Nabila Aprillia<br><span>1st Winner BIONIX 2019</span></h4>
-                      </div>
-                    </div>
                   </div>
-                </div>
-              </div>
-              <div class="swiper-slide">
-                <div class="content">
-                  <div class="container-fluid">
-                    <div class="row">
-                      <div class="col-4 img-arif rounded-right">
+                  <div class="swiper-slide">
+                      <div class="content d-flex">
+                          <div class="container-fluid d-md-flex">
+                              <div class="row">
+                                  <div class="col-md-4 img-arif rounded-end">
+                                  </div>
+                                  <div class="col-md-8 desc">
+                                      <h2 style="font-family: 'Hind Bold'">Dapat ilmu <span>pemrograman</span>, dan <span>bisnis</span>!
+                                      </h2>
+                                      <p>“Di BIONIX aku bisa dapet banyak ilmu baru, belajar IT dan pemrograman hingga
+                                          caranya
+                                          belajar bikin ide bisnis. Aku yakin BIONIX akan lebih asik karena banyak manfaat
+                                          yang bisa didapetin.”</p>
+                                      <h4>M Arif Nuriman<br><span
+                                              style="color: rgba(0,0,0,0.65)">1st Winner BIONIX 2019</span></h4>
+                                  </div>
+                              </div>
+                          </div>
                       </div>
-                      <div class="col-8 desc">
-                        <h2>Bisa dapat <span>Free Pass SNMPTN</span>, <span>banyak relasi</span>, dan <span>wawasan baru!</span></h2>
-                        <p>“Dari BIONIX, wawasanku lebih terbuka tentang sistem informasi dan dapat banyak wawasan baru yang sebelumnya gak aku dapetin di SMA. Selain itu, di BIONIX aku juga dapet banyak temen baru yang bahkan masih keep contact sampai sekarang sehingga dari sini aku juga bisa memperluas relasi. Last but not least, aku juga dapat Free Pass SNMPTN Sistem Informasi ITS berkat BIONIX.”</p>
-                        <h4>M Arif Nuriman<br><span>1st Winner BIONIX 2019</span></h4>
-                      </div>
-                    </div>
                   </div>
-                </div>
               </div>
-            </div>
-            <div class="swiper-button-next"></div>
-            <div class="swiper-button-prev"></div>
-            <div class="swiper-pagination"></div>
+              <div class="swiper-button-next"></div>
+              <div class="swiper-button-prev"></div>
           </div>
-        </div>
+      </div>
         
         <!-- tunggu apa lagi section -->
         <div class="bottom-text text-center">
@@ -280,7 +299,7 @@
             </div>
             <hr>
             <div class="row">
-              <div class="col col-sm-2 text-sm-start text-center">
+              <div class="col col-sm-2 text-sm-start text-center" id="footer-link">
                 <ul>
                   <p><strong>Our Events</strong></p>
                   <li><a href="#">ISE!</a></li>
@@ -288,14 +307,14 @@
                   <li><a href="#">Merch</a></li>
                 </ul>
               </div>
-              <div class="col col-sm-3 text-sm-start text-center">
+              <div class="col col-sm-3 text-sm-start text-center" id="footer-link">
                 <ul>
                   <p><strong>Bionix</strong></p>
                   <li><a href="#">Bionix Student Level</a></li>
                   <li><a href="#">Bionix College Level</a></li>
                 </ul>
               </div>
-              <div class="col col-sm-3 text-sm-start text-center">
+              <div class="col col-sm-3 text-sm-start text-center" id="footer-link">
                 <ul>
                   <p><strong>ICON</strong></p>
                   <li><a href="#">ICON Academy</a></li>
@@ -304,7 +323,7 @@
                   <li><a href="#">Virtual Intern & Job Fair</a></li>
                 </ul>
               </div>
-              <div class="col col-sm-3 text-sm-start text-center shop">
+              <div class="col col-sm-3 text-sm-start text-center shop" id="footer-link">
                 <ul>
                   <p><strong>SHOP</strong></p>
                   <li><a href="#">Merchandise<i class="fas fa-external-link-alt"></i></a></li>
