--- a/college-level.html
+++ b/college-level.html
@@ -273,7 +273,7 @@
             <div class="row" id="circle-timeline-cl">
               <div class="col">
                 <div class="circle" id="rocket">
-                  <img src="/img/rocket.png" alt="">
+                  <div id="inside-circle"></div>
                 </div>
               </div>
               <div class="col">
@@ -425,7 +425,7 @@
             </div>
             <hr>
             <div class="row">
-              <div class="col col-sm-2 text-sm-left text-center">
+              <div class="col col-sm-2 text-sm-left text-center" id="footer-link">
                 <ul>
                   <p><strong>Our Events</strong></p>
                   <li><a href="#">ISE!</a></li>
@@ -433,14 +433,14 @@
                   <li><a href="#">Merch</a></li>
                 </ul>
               </div>
-              <div class="col col-sm-3 text-sm-left text-center">
+              <div class="col col-sm-3 text-sm-left text-center" id="footer-link">
                 <ul>
                   <p><strong>Bionix</strong></p>
                   <li><a href="#">Bionix Student Level</a></li>
                   <li><a href="#">Bionix College Level</a></li>
                 </ul>
               </div>
-              <div class="col col-sm-3 text-sm-left text-center">
+              <div class="col col-sm-3 text-sm-left text-center" id="footer-link">
                 <ul>
                   <p><strong>ICON</strong></p>
                   <li><a href="#">ICON Academy</a></li>
@@ -449,7 +449,7 @@
                   <li><a href="#">Virtual Intern & Job Fair</a></li>
                 </ul>
               </div>
-              <div class="col col-sm-3 text-sm-left text-center shop">
+              <div class="col col-sm-3 text-sm-left text-center shop" id="footer-link">
                 <ul>
                   <p><strong>SHOP</strong></p>
                   <li><a href="#">Merchandise<i class="fas fa-external-link-alt"></i></a></li>
