--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <meta name="theme-color" content="#F4EBC1" />
 
-  <link rel="icon" href="img/logo-ise-2021.svg" />
+  <link rel="icon" href="/img/logo-ise-2021.svg" />
   <link rel="stylesheet" href="css/bootstrap.min.css" />
   <link rel="stylesheet" href="css/swiper-bundle.min.css" />
   <link rel="stylesheet" href="css/style.css" />
@@ -37,7 +37,7 @@
   <!--navbar section-->
   <div class="nav-container">
       <nav class="navbar navbar-custom fixed-top navbar-expand-lg container-fluid mb-5">
-        <div class="logo"><a class="navbar-brand" href="index.html"><img src="img/logo-ise-2021.svg" alt="logo ISE! 2021" /></a></div>
+        <div class="logo"><a class="navbar-brand" href="index.html"><img src="/img/logo-ise-2021.svg" alt="logo ISE! 2021" /></a></div>
         <div class="collapse navbar-collapse w-100 order-3 dual-collapse2 list" id="collapse_target">
           <ul class="border-0 nav navbar-nav nav-tabs ms-auto" role="tablist">
             <li class="nav-item">
