--- a/404.html
+++ b/404.html
@@ -13,7 +13,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <meta name="theme-color" content="#F4EBC1" />
 
-  <link rel="icon" href="img/favicon.png" />
+  <link rel="icon" href="img/logo-ise-2021.svg" />
   <link rel="stylesheet" href="css/bootstrap.min.css" />
   <link rel="stylesheet" href="css/style.css" />
   <link rel="stylesheet" href="css/normalize.min.css" />
