--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
           <div class="swiper-wrapper">
             <div class="swiper-slide slide1">
               <div class="about">
-              <img src="img/line-bionix.svg" class="img-fluid" alt="">
+              <img src="/img/line-bionix.svg" class="img-fluid" alt="">
               <h1>BUSINESS AND IT OLYMPIAD<br>
                 ON INFORMATION SYSTEMS EXPO</h1>
                 <p>Business and IT Olympiad on Information Systems Expo, olimpiade bisnis dan IT terbesar di Indonesia<br> untuk tingkat pelajar SMA/SMK sederajat dan mahasiswa.</p>
@@ -106,10 +106,10 @@
           <div class="button-hadiah">
             <ul class="nav nav-tabs justify-content-center" id="myTab" role="tablist">
               <li class="nav-item" role="presentation">
-                <button class="nav-link active px-5 py-3 m-3" id="hadiahsl-tab" data-bs-toggle="tab" data-bs-target="#hadiahsl" type="button" role="tab" aria-controls="hadiahsl" aria-selected="true"><img src="img/medali-sl.svg" alt=""> Bionix Student Level</button>
+                <button class="nav-link active px-5 py-3 m-3" id="hadiahsl-tab" data-bs-toggle="tab" data-bs-target="#hadiahsl" type="button" role="tab" aria-controls="hadiahsl" aria-selected="true"><img src="/img/medali-sl.svg" alt=""> Bionix Student Level</button>
               </li>
               <li class="nav-item" role="presentation">
-                <button class="nav-link px-5 py-3 m-3" id="hadiahcl-tab" data-bs-toggle="tab" data-bs-target="#hadiahcl" type="button" role="tab" aria-controls="hadiahcl" aria-selected="false"><img src="img/medali-cl.svg" alt=""> Bionix College Level</button>
+                <button class="nav-link px-5 py-3 m-3" id="hadiahcl-tab" data-bs-toggle="tab" data-bs-target="#hadiahcl" type="button" role="tab" aria-controls="hadiahcl" aria-selected="false"><img src="/img/medali-cl.svg" alt=""> Bionix College Level</button>
               </li>
             </ul>
           </div>
@@ -121,7 +121,7 @@
                     <div class="card">
                       <div class="card-body">
                         <h4>Juara 3</h4>
-                        <img src="img/juara3-bionix-sl.svg" class ="img-fluid" alt="">
+                        <img src="/img/juara3-bionix-sl.svg" class ="img-fluid" alt="">
                         <p>Rp 2.000.000<br><span>+ Sertifikat</span></p>
                       </div>
                     </div>
@@ -130,7 +130,7 @@
                     <div class="card">
                       <div class="card-body">
                         <h4>Juara 1</h4>
-                        <img src="img/juara1-bionix-sl.svg" class ="img-fluid" alt="">
+                        <img src="/img/juara1-bionix-sl.svg" class ="img-fluid" alt="">
                         <p>Freepass SNMPTN<br>Sistem Informasi<br>ITS 2022<br><span>+ Rp 5.000.000<br>Sertifikat</span></p>
                       </div>
                     </div>
@@ -139,7 +139,7 @@
                     <div class="card">
                       <div class="card-body">
                         <h4>Juara 2</h4>
-                        <img src="img/juara2-bionix-sl.svg" class ="img-fluid" alt="">
+                        <img src="/img/juara2-bionix-sl.svg" class ="img-fluid" alt="">
                         <p>Rp 3.000.000<br><span>+ Sertifikat</span></p>
                       </div>
                     </div>
@@ -154,7 +154,7 @@
                     <div class="card juara3">
                       <div class="card-body">
                         <h4>Juara 3</h4>
-                        <img src="img/juara3-bionix-sl.svg" class ="img-fluid" alt="">
+                        <img src="/img/juara3-bionix-sl.svg" class ="img-fluid" alt="">
                         <p>Rp 1.000.000<br><span>+ Sertifikat</span></p>
                       </div>
                     </div>
@@ -163,7 +163,7 @@
                     <div class="card">
                       <div class="card-body">
                         <h4>Juara 1</h4>
-                        <img src="img/juara1-bionix-sl.svg" class ="img-fluid" alt="">
+                        <img src="/img/juara1-bionix-sl.svg" class ="img-fluid" alt="">
                         <p>Rp 3.000.000<br><span>+ Sertifikat</span></p>
                       </div>
                     </div>
@@ -172,7 +172,7 @@
                     <div class="card juara2">
                       <div class="card-body">
                         <h4>Juara 2</h4>
-                        <img src="img/juara2-bionix-sl.svg" class ="img-fluid" alt="">
+                        <img src="/img/juara2-bionix-sl.svg" class ="img-fluid" alt="">
                         <p>Rp 2.000.000<br><span>+ Sertifikat</span></p>
                       </div>
                     </div>
@@ -255,7 +255,7 @@
           <div class="container" id="footer">
             <div class="row">
               <div class="col-12 col-sm-6 text-sm-start text-center">
-                <img src="img/logo-ise-2021-putih.svg" alt="logo ise 2021" class="img-fluid" width="120px" height="auto">
+                <img src="/img/logo-ise-2021-putih.svg" alt="logo ise 2021" class="img-fluid" width="120px" height="auto">
               </div>
               <div class="col-12 col-sm-6 text-sm-end text-center" id="footer-right">
                 <h1>Temukan Kami di Sosial Media!</h1>
