rename img source

--- a/404.html
+++ b/404.html
@@ -117,7 +117,7 @@
           <div class="container" id="footer">
             <div class="row">
               <div class="col-12 col-sm-6 text-center text-sm-left">
-                <img src="/img/logo-ise-2021-putih.svg" alt="logo ise 2021" class="img-fluid" width="120px" height="auto">
+                <img src="img/logo-ise-2021-putih.svg" alt="logo ise 2021" class="img-fluid" width="120px" height="auto">
               </div>
               <div class="col-12 col-sm-6 text-center text-sm-right" id="footer-right">
                 <h1>Find us on our social media</h1>
