--- a/college-level.html
+++ b/college-level.html
@@ -87,7 +87,7 @@
       </li>
     </ul>
     <a href="#" class="nav-link" id="daftar">Daftar</a>
-    <a href="#" class="nav-link" id="guidebook"><img src="/img/DownloadSimple.svg" alt=""> Guidebook</a>
+    <a href="#" class="nav-link" id="guidebook"><img src="img/DownloadSimple.svg" alt=""> Guidebook</a>
 
 </nav>
 
@@ -98,10 +98,10 @@
         <div class="container">
           <div class="row">
             <div class="col-3 text-end">
-              <img src="/img/medali-sl-putih.svg" class="img-fluid" alt="">
+              <img src="img/medali-sl-putih.svg" class="img-fluid" alt="">
             </div>
             <div class="col-8 text-left">
-              <h1><img src="/img/line-putih.svg" class="img-fluid" alt="" style="width: 10%;">   BIONIX College Level</h1>
+              <h1><img src="img/line-putih.svg" class="img-fluid" alt="" style="width: 10%;">   BIONIX College Level</h1>
               <p>Kompetisi studi kasus bisnis nasional yang berfokus pada pemecahan studi kasus bisnis dan teknologi informasi yang dialami oleh suatu perusahaan untuk tingkat mahasiswa di Indonesia. Bionix College Level dilaksanakan melalui tiga tahapan kompetisi dengan konsep acara daring penuh.
               </p>
             </div>
@@ -218,7 +218,7 @@
                     <div class="card juara3">
                       <div class="card-body">
                         <h4>Juara 3</h4>
-                        <img src="/img/juara3-bionix-sl.svg" class ="img-fluid" alt="">
+                        <img src="img/juara3-bionix-sl.svg" class ="img-fluid" alt="">
                         <p>Rp 1.000.000<br><span>+ Sertifikat</span></p>
                       </div>
                     </div>
@@ -227,7 +227,7 @@
                     <div class="card">
                       <div class="card-body">
                         <h4>Juara 1</h4>
-                        <img src="/img/juara1-bionix-sl.svg" class ="img-fluid" alt="">
+                        <img src="img/juara1-bionix-sl.svg" class ="img-fluid" alt="">
                         <p>Rp 3.000.000<br><span>+ Sertifikat</span></p>
                       </div>
                     </div>
@@ -236,7 +236,7 @@
                     <div class="card juara2">
                       <div class="card-body">
                         <h4>Juara 2</h4>
-                        <img src="/img/juara2-bionix-sl.svg" class ="img-fluid" alt="">
+                        <img src="img/juara2-bionix-sl.svg" class ="img-fluid" alt="">
                         <p>Rp 2.000.000<br><span>+ Sertifikat</span></p>
                       </div>
                     </div>
@@ -394,7 +394,7 @@
           <div class="container" id="footer">
             <div class="row">
               <div class="col-12 col-sm-6 text-sm-start text-center">
-                <img src="/img/logo-ise-2021-putih.svg" alt="logo ise 2021" class="img-fluid" width="120px" height="auto">
+                <img src="img/logo-ise-2021-putih.svg" alt="logo ise 2021" class="img-fluid" width="120px" height="auto">
               </div>
               <div class="col-12 col-sm-6 text-sm-end text-center" id="footer-right">
                 <h1>Temukan Kami di Sosial Media!</h1>
