--- a/student-level.html
+++ b/student-level.html
@@ -95,7 +95,7 @@
             </li>
           </ul>
           <a href="#" class="nav-link" id="daftar">Daftar</a>
-          <a href="#" class="nav-link" id="guidebook"><img src="/img/DownloadSimple.svg" alt=""> Guidebook</a>
+          <a href="#" class="nav-link" id="guidebook"><img src="img/DownloadSimple.svg" alt=""> Guidebook</a>
 
       </nav>
 
@@ -106,10 +106,10 @@
         <div class="container">
           <div class="row">
             <div class="col-3 text-end">
-              <img src="/img/medali-sl-putih.svg" class="img-fluid" alt="">
+              <img src="img/medali-sl-putih.svg" class="img-fluid" alt="">
             </div>
             <div class="col-8 text-left">
-              <h1><img src="/img/line-putih.svg" class="img-fluid" alt="" style="width: 10%;">   BIONIX Student Level</h1>
+              <h1><img src="img/line-putih.svg" class="img-fluid" alt="" style="width: 10%;">   BIONIX Student Level</h1>
               <p>Olimpiade bisnis dan IT terbesar di Indonesia untuk tingkat pelajar SMA/SMK sederajat. Bionix Student Level dilaksanakan melalui empat tahapan kompetisi dengan konsep acara daring penuh</p>
             </div>
           </div>
@@ -247,7 +247,7 @@
                     <div class="card">
                       <div class="card-body">
                         <h4>Juara 3</h4>
-                        <img src="/img/juara3-bionix-sl.svg" class ="img-fluid" alt="">
+                        <img src="img/juara3-bionix-sl.svg" class ="img-fluid" alt="">
                         <p>Rp 2.000.000<br><span>+ Sertifikat</span></p>
                       </div>
                     </div>
@@ -256,7 +256,7 @@
                     <div class="card">
                       <div class="card-body">
                         <h4>Juara 1</h4>
-                        <img src="/img/juara1-bionix-sl.svg" class ="img-fluid" alt="">
+                        <img src="img/juara1-bionix-sl.svg" class ="img-fluid" alt="">
                         <p>Freepass SNMPTN<br>Sistem Informasi<br>ITS 2022<br><span>+ Rp 5.000.000<br>Sertifikat</span></p>
                       </div>
                     </div>
@@ -265,7 +265,7 @@
                     <div class="card">
                       <div class="card-body">
                         <h4>Juara 2</h4>
-                        <img src="/img/juara2-bionix-sl.svg" class ="img-fluid" alt="">
+                        <img src="img/juara2-bionix-sl.svg" class ="img-fluid" alt="">
                         <p>Rp 3.000.000<br><span>+ Sertifikat</span></p>
                       </div>
                     </div>
@@ -545,7 +545,7 @@
           <div class="container" id="footer">
             <div class="row">
               <div class="col-sm-6 text-center text-sm-start">
-                <img src="/img/logo-ise-2021-putih.svg" alt="logo ise 2021" class="img-fluid" width="120px" height="auto">
+                <img src="img/logo-ise-2021-putih.svg" alt="logo ise 2021" class="img-fluid" width="120px" height="auto">
               </div>
               <div class="col-sm-6 text-md-end text-center" id="footer-right">
                 <h1>Temukan Kami di Sosial Media!</h1>
